@startuml
skinparam classFontName "Helvetica"
skinparam classFontSize 14
skinparam ArrowColor Black
skinparam BackgroundColor White
skinparam classAttributeIconSize 0
skinparam Shadowing false
skinparam Padding 10

skinparam packageStyle rectangle
skinparam classBorderColor Black
skinparam classBackgroundColor White
skinparam linetype ortho

title nozzle-design-benchmark – Class Diagram (Publication-Ready)

package "geometry" {
    class MOCSolver #e9f5e7 {
        - machExit: float
        - pressureRatio: float
        + computeCharacteristics(): list
        + generateGeometry(): NozzleGeometry
    }

    class NozzleGeometry #e9f5e7 {
        - controlPoints: list
        - throatRadius: float
        - exitRadius: float
        - length: float
        + fromMOC(params): NozzleGeometry
        + fromParams(params): NozzleGeometry
        + exportGeo(filename): void
        + plotProfile(): void
    }
}

package "evaluators" {
    class CFDSimulation #fff3d6 {
        - geometry: NozzleGeometry
        - solverConfig: dict
        - resultPath: str
        + run(): void
        + extractResults(): EvaluationResult
        + computeThrust(): float
        + plotFields(): void
    }

    class FastEvaluator #fff3d6 {
        - model: object
        + predict(geometry: NozzleGeometry): EvaluationResult
        + train(dataset: list): void
    }

    class EvaluationResult #fff3d6 {
        - machProfile: list
        - pressureLoss: float
        - thrust: float
        - geometryId: str
        + compareWith(other: EvaluationResult): dict
        + saveToJSON(filepath: str): void
    }
}

package "optimization" {
    class Optimizer #f0e5ff {
        - searchSpace: dict
        - objectiveFunc: function
        - algorithm: str
        + run(): EvaluationResult
        + logBest(): void
    }

    class OptimizationRunner #f0e5ff {
        - optimizer: Optimizer
        - evaluator: CFDSimulation
        + start(): void
        + saveHistory(): void
    }
}

package "benchmarks" {
    class BenchmarkSuite #d8eafd {
        - mocGeometry: NozzleGeometry
        - optimizedGeometry: NozzleGeometry
        - evaluator: CFDSimulation
        + runAll(): void
        + compare(): dict
    }
}

package "analysis" {
    class AnalysisNote #fdf5f7 {
        ' Plotting utilities
        ' Metrics
        ' Report generation
    }
}

package "main scripts" {
    class main_moc_pipeline <<script>> #eeeeee
    class main_optimizer <<script>> #eeeeee
    class main_benchmark <<script>> #eeeeee
}

' RELATIONS
MOCSolver --> NozzleGeometry : generates
CFDSimulation *-- NozzleGeometry : uses
FastEvaluator --> NozzleGeometry : predicts on
CFDSimulation --> EvaluationResult : returns
FastEvaluator --> EvaluationResult : returns
Optimizer --> EvaluationResult : returns
OptimizationRunner *-- Optimizer : has
OptimizationRunner *-- CFDSimulation : uses
BenchmarkSuite *-- NozzleGeometry : compares
BenchmarkSuite *-- CFDSimulation : uses
main_moc_pipeline --> MOCSolver
main_optimizer --> OptimizationRunner
main_benchmark --> BenchmarkSuite
@enduml